2006-03-20  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/datatypes.py:
	* tests/test_datatypes.py:
	Output a string in a locale dependent way, even if a format is not
	provided
	Fixes #2486

2006-03-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/component.py:
	* kiwi/interfaces.py:
	* kiwi/proxies.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/proxy.py:
	* tests/test_component.py:
	Add implements() and providedBy() in a (almost) zope.interface
	compatible way. Plenty of tests.
	Fixes #2501

2006-03-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/decorators.py (deprecated.wrapper): Add an optional log argument

	* kiwi/log.py (_log_levels): Add a global log object

2006-03-17  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (ComboEntry._on_entry_completion__match_selected): When entry completion is used, update the iter in the treeview aswell.

2006-03-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py (_ComboEntryPopup.popup): 
	Set the height on the treeview instead of the popup window.

=== 1.9.7 ===
2006-03-11  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

2006-03-07  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/entry.py:

	Make sure the width of the dateentry is not longer than
	it needs to be, don't expand at all.

2006-03-06  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.py:
	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/hyperlink.py:

	Add gazpacho support for hyperlink.	

2006-03-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/component.py: 
	(get_utility): Add limited support for zope.interfaces.

2006-03-05  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/dateentry.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_dateentry.py:

	Add a DateEntry which has a toggle button that popups a calendar.
